--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.8.0",
     "seaborn>=0.13.0",
     "plotly>=5.17.0",
+    "streamlit>=1.49.1",
 ]
 
 [project.optional-dependencies]
