--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,5 +105,12 @@ strict_equality = true
 
 [dependency-groups]
 dev = [
+    "matplotlib>=3.10.6",
+    "numpy>=2.3.2",
+    "pandas>=2.3.2",
+    "plotly>=6.3.0",
     "pre-commit>=4.3.0",
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "seaborn>=0.13.2",
 ]
