--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,28 @@ wheels/
 
 # Virtual environments
 .venv
+
+# Generated data files and reports
+*.xlsx
+
+# Spezifisch generierte CSV-Dateien (durch Skripte erstellt)
+bereinigte_produktionsdaten.csv
+produktionsdaten_deutsch.csv
+maschinendaten.csv
+export_zusammenfassung.csv
+produktionsanalyse_*.csv
+qualitaetsanalyse.csv
+*_zusammenfassung.csv
+monatliche_trends.csv
+pivot_produktionszeit.csv
+uebung_*_ergebnisse.csv
+
+# JSON-Protokolle und Reports
+bereinigungsprotokoll.json
+maschinendaten.json
+
+# Coverage and test reports
+htmlcov/
+.coverage
+coverage.xml
+.pytest_cache/
