🗂️ feat: Implementiere Git LFS und reorganisiere Testdaten-Struktur
Detaillierte Erklärung:
- Git LFS für große Dateien (>10MB) konfiguriert
- V084_Scope.csv (73.91 MB) nach data/large/ verschoben und mit LFS verwaltet
- Neue Datenstruktur: data/samples/, data/large/, data/generated/
- Testdaten produktionsdaten.csv und schmutzige_daten.csv nach data/samples/
- Skripte aktualisiert für neue Pfadstruktur
- Makefile um LFS-Befehle erweitert (lfs-pull, lfs-status, lfs-clean)
- .gitignore für neue Struktur angepasst
- Bessere Trennung zwischen Lernmaterialien und generierten Dateien

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ wheels/
 # Generated data files and reports
 *.xlsx
 
-# Spezifisch generierte CSV-Dateien (durch Skripte erstellt)
+# Generierte Dateien im Root-Verzeichnis (Legacy)
 bereinigte_produktionsdaten.csv
 produktionsdaten_deutsch.csv
 maschinendaten.csv
@@ -26,6 +26,9 @@ qualitaetsanalyse.csv
 monatliche_trends.csv
 pivot_produktionszeit.csv
 uebung_*_ergebnisse.csv
+
+# Neue Datenstruktur - Generierte Dateien
+data/generated/
 
 # JSON-Protokolle und Reports
 bereinigungsprotokoll.json
