--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ htmlcov/
 .coverage
 coverage.xml
 .pytest_cache/
+
+# Visualisierung - Generierte HTML-Dateien
+*.html
+!**/templates/*.html
+!**/static/*.html
