--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "seaborn>=0.13.0",
     "plotly>=5.17.0",
     "scipy>=1.16.1",
+    "streamlit>=1.28.0",
+    "pyside6>=6.6.0",
+    "openpyxl>=3.1.0",
 ]
 
 [project.optional-dependencies]
@@ -21,6 +24,22 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "mypy>=1.7.0",
+]
+
+ui = [
+    "streamlit>=1.28.0",
+    "PySide6>=6.6.0",
+    "openpyxl>=3.1.0",
+    "plotly>=5.17.0",
+    "dash>=2.14.0",
+]
+
+test = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-mock>=3.12.0",
+    "pytest-qt>=4.2.0",
+    "psutil>=5.9.0",
 ]
 
 [build-system]
