--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "streamlit>=1.28.0",
     "pyside6>=6.6.0",
     "openpyxl>=3.1.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.optional-dependencies]
