--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -32,7 +32,10 @@ jobs:
     - name: Setup virtual display for GUI tests
       run: |
         sudo apt-get update
-        sudo apt-get install -y xvfb
+        sudo apt-get install -y xvfb libgl1-mesa-glx libegl1-mesa libxrandr2 libxss1 libxcursor1 libxcomposite1 libasound2 libxi6 libxtst6
+      env:
+        QT_QPA_PLATFORM: offscreen
+        DISPLAY: ":99"
 
     - name: Run UI utility tests
       run: |
@@ -41,6 +44,9 @@ jobs:
     - name: Run simple UI tests
       run: |
         xvfb-run -a uv run pytest tests/test_08_ui_simple.py -v --tb=short
+      env:
+        QT_QPA_PLATFORM: offscreen
+        DISPLAY: ":99"
 
     - name: Run basic UI tests (without GUI)
       run: |
@@ -53,7 +59,10 @@ jobs:
     - name: Generate test report
       if: always()
       run: |
-        uv run pytest tests/test_08_ui_simple.py --junit-xml=test-results.xml --cov-report=xml
+        xvfb-run -a uv run pytest tests/test_08_ui_simple.py --junit-xml=test-results.xml --cov-report=xml
+      env:
+        QT_QPA_PLATFORM: offscreen
+        DISPLAY: ":99"
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
